--- a/task4.html
+++ b/task4.html
@@ -9,7 +9,7 @@
 <a href="task2.html"><b>TASK2</b></a> <br>
 <a href="task3.html"><b>TASK3</b></a> <br>
 <a href="https://itstudy.ru"><b>itstudy</b></a> <br>
-<a href="https://ya.ru" target="blank"><b>YANDEX</b></a> 
+<a href="https://ya.ru" target="_blank"><b>YANDEX</b></a> 
 </body>
 </html>
 
